# rust-grpc

./: Cargo.toml  Dockerfile  README.md  build.rs
node-client-for-fun/: app.ts  grpc-client.ts
node-client-for-fun/proto/: types.ts
node-client-for-fun/services/: todo.ts
server/: Cargo.toml  README.md  build.rs
server/proto/: todo.proto
server/src/: client.rs  server.rs
src/: _client.rs  client.rs
